--- a/demos/style/blog/post-summary.css
+++ b/demos/style/blog/post-summary.css
@@ -1,10 +1,8 @@
-.PostSummary{
-  a{
-    h1{
-
-    }
-  }
-  div{
-
-  }
+li.PostSummary{
+  border:none;
+  border-bottom: 1px solid var(--accent-color);
+  padding:8px;
+  margin:8px;
+  min-height:300px;
+  max-width:600px;
 }
