--- a/demos/style/blog/index-page.css
+++ b/demos/style/blog/index-page.css
@@ -1,3 +1,7 @@
-ul{
-  @import './post-summary.css';
+body.IndexPage{
+  ul{
+    list-style: none;
+    padding:0;
+    @import './post-summary.css';
+  }
 }
