--- a/demos/style/todo/todo-list.css
+++ b/demos/style/todo/todo-list.css
@@ -1,9 +1,8 @@
 .TodoList{
   width:100%;
-  height:50%;
-
+  padding:0;
   li{
-    color:red;
-    
+    color: #770000;
+    list-style: none;
   }
 }
